CHANGELOG

2.0.16
UTILS:
* pa_panos-xml-issue-detector | improvement to use parent methods from class UTIL
* pa_appid-enabler / pa_config-size / pa_upload-config - improve to use parent available methods from class UTIL
* UTIL - pa_config-size / pa_diff / pa_override-finder / pa_upload - optimisation to use more of class UTIL
* pa_application-edit | introduce 'filter=(object has.member XYZ)'

BUGFIX:
* pa_appid-enabler | bugfix regarding how variables are used, after moving over to class APPIDENABLER()
* pa_address-merger | bugfix for call class MERGER()
* pa_panos-xml-issue-detector | bugfix how variables are used after moving to class XMLISSUE

GENERAL:


2.0.15 (20211012)
UTILS:
* optimise all object merger scripts to use class MERGER
* pa_key-manager - introduce class KEYMANAGER - make use of main class UTIL
* pa_rule-edit | actions=display:resolveservicesummary - improve output for JSON response
* pa_download-predefined | make use of CLASS PREDEFINED
* pan-os-php | introduce key-manager and all other object merger script
* pa_panos-xml-issue-detector | introduce class XMLISSUE extend UTIL - make use of XMLISSUE within script pa_panos-xml-issue-detecotor
* pa_key-manager - optimisation to support better JSON response
* pa_diff | introduce class DIFF extends UTIL - make use of XMLISSUE within script pa_diff
* pa_override-finder | introduce class OVERRIDE extend UTIL - make use of this in pa_override-finder
* pa_appid-enabler | introduce class APPIDENABLER extend UTIL - make use of it in pa_appid-enabler - to support PAN-OS-PHP API in the future
* pa_config-size | introduce class CONFIGSIZE extend UTIL - make us in pa_config-size and prepare for future API usage
* pa_bpa-generator - introduce class BPAGENERATOR - make use of it in pa_bpa-generator
* UTIL api - introduce support for override-finder/diff/upload/xml-issue/appid-enabler/config-size

BUGFIX:
* pa_securityprofile-edit | bugfix to handle JSON output for shared and other DG/VSYS correctly