@@ -6,6 +6,7 @@ UTILS:
 * pa_appid-enabler / pa_config-size / pa_upload-config - improve to use parent available methods from class UTIL
 * UTIL - pa_config-size / pa_diff / pa_override-finder / pa_upload - optimisation to use more of class UTIL
 * pa_application-edit | introduce 'filter=(object has.member XYZ)'
+* pa_application-edit - improve actions=display for applicationGroup
 
 BUGFIX:
 * pa_appid-enabler | bugfix regarding how variables are used, after moving over to class APPIDENABLER()
